[package]
name = "selfish"
version = "0.1.0"
authors = ["Ilya Bogdanov <fumlead@gmail.com>"]
description = "Lisp language for game scripting"
repository = "https://github.com/vitvakatu/selfish"
license = "MIT/Apache-2.0"


[dependencies]
rustyline = "1.0"
regex = "0.2"

[dependencies.nom]
version = "^3.1"
features = ["verbose-errors", "regexp"]